--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@ port = 8787
 local_protocol = "http"
 
 [env.vars]
-CUSTOM_DOMAIN = "libcuda.so"
+CUSTOM_DOMAIN = "srelab.dev"
 
 [env.dev.vars]
 MODE = "debug"
